# serde-txtrecord

./: Cargo.toml  README.md
.github/workflows/: publish.yml  tests.yml
examples/: book.rs  complex.rs  objobj.rs  simple.rs  vecvec.rs
src/: config.rs  de.rs  lib.rs  ser.rs
